src/public/css/index.css
/* ... */
.modalLabel {
	flex: 1;
	display: flex;
	flex-direction: column;
	margin-bottom: 10px;
	font-weight: 500;
	font-size: 0.95rem;
	color: #333;
}

.modalBoxStyles {
	margin-top: 0.5rem;
	padding: 0.6rem;
	border: 1px solid #ccc;
	border-radius: 8px;
	font-size: 0.95rem;
	background-color: #f9f9f9;
}

textarea.modalBoxStyles {
	width: 100%;
	height: auto;
	min-height: 5px;
	resize: vertical;
	box-sizing: border-box;
	resize: none;
}

.appointmentModalButtons {
	display: flex;
	justify-content: space-between;
	margin-top: 1rem;
}

.appointmentModalButtons button {
	flex: 1;
	padding: 0.7rem;
	border: none;
	border-radius: 8px;
	font-size: 1rem;
	font-weight: bold;
	cursor: pointer;
	margin: 0 0.25rem;
}

#modalButtonSaveAppointment,
#modalButtonSaveBlock {
	background-color: #e2e200;
	color: #fff;
}

#modalButtonSaveAppointment:hover,
#modalButtonSaveBlock:hover {
	background-color: #c1c638;
}

#modalButtonCancelAppointment,
#modalButtonCancelBlock {
	background-color: #dc3545;
	color: #fff;
}

#modalButtonCancelAppointment:hover,
#modalButtonCancelBlock:hover {
	background-color: #c82333;
}

.appointmentToggleContainer {
	display: flex;
	background: #e9e9e9;
	border-radius: 10px;
	overflow: hidden;
	margin-bottom: 1rem;
}

.appointmentToggleContainer button {
	flex: 1;
	padding: 0.8rem;
	border: none;
	cursor: pointer;
	font-weight: bold;
	font-size: 0.95rem;
}

.appointmentToggleActive {
	background-color: #e2e200;
	color: #000;
}

.appointmentToggleInactive {
	background-color: #f0f0f0;
	color: #444;
}

.SchedulingTimelineCardDefault {
	background-color: #d9d9d9;
}

.SchedulingTimelineCardBlocked {
	background-color: #eb4335;
}

.SchedulingTimelineCardPending {
	background-color: #e2e200;
}

.todayCard {
	position: relative;
}

.todayCard::after {
	content: "";
	position: absolute;
	top: 8px;
	left: 50%;
	transform: translateX(-50%);
	width: 10px;
	height: 10px;
	background-color: black;
	border-radius: 50%;
}

.invisible {
	background-color: #f5f5f5;
}

/* ServiceDashboard */

.serviceDashboardMainContainer {
	height: 100%;
	display: flex;
	flex-direction: column;
	padding: 15px 50px;
}

.registerStaffButton {
	width: fit-content;
	padding: 10px 30px;
	border-radius: 5px;
	border: 1px solid #9fa324;
	font-size: 16px;
	background-color: #9fa324;
	color: #fff;
	transition: all 0.1s ease;
	cursor: pointer;
}

.registerStaffButton:hover {
	background-color: transparent;
	color: #9fa324;
}

.noDataContainer {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	height: 100%;
}

.noDataImage {
	background-image: url("../assets/servicesPage/noDataServices.svg");
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	height: 100px;
	width: 100px;
}

.noDataTitle {
	font-size: 50px;
	color: #9fa324;
}

/* ServiceCard */

.serviceCardContainer {
  display: flex;
  padding: 20px;
  margin-top: 15px;
  background-color: #fff;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  align-items: center;
  flex-wrap: wrap;
  transition: all 0.1s ease;
}

.serviceCardContainer:hover {
  transform: scale(1.01);
}

.servicePriceArea {
  color: #8a8a15;
}

.serviceDurationArea {
  display: flex;
  color: #5f5f5f;
}

.clockIcon {
  width: 16px;
  height: 16px;
  margin-right: 5px;
  vertical-align: middle;
}

.serviceCardInfo {
	display: flex;
	flex-direction: column;
	flex: 1;
	row-gap: 10px;
}

.serviceCardButtonContainer {
	display: flex;
	column-gap: 10px;
}

.serviceCardEditButton {
	padding: 10px 0px;
	width: 150px;
	border: none;
	cursor: pointer;
	border-radius: 5px;
	font-size: 16px;
	color: white;
	background-color: #dee33e;
	transition: all 0.3s ease;
}

.serviceCardEditButton:hover {
	background-color: #c1c638;
}

.serviceCardDeleteButton {
	padding: 10px 0px;
	width: 150px;
	border: none;
	cursor: pointer;
	border-radius: 5px;
	font-size: 16px;
	color: white;
	background-color: #dc3545;
	transition: all 0.3s ease;
}

.serviceCardDeleteButton:hover {
	background-color: #c82333;
}

/* ServiceModal */

.serviceModalMainContainer {
	z-index: 100;
	width: 100%;
	height: 100vh;
	position: fixed;
	top: 0;
	left: 0;
	background: rgba(0, 0, 0, 0.5);
	display: flex;
	justify-content: center;
	align-items: center;
}

.serviceModalContent {
	width: 500px;
	max-width: 80%;
	height: auto;
	background: white;
	border-radius: 12px;
	box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
	display: flex;
	flex-direction: column;
	row-gap: 10px;
	position: relative;
	overflow: hidden;
	padding-bottom: 40px;
}

.serviceModalHeader {
	padding: 20px 0;
	position: relative;
}

.serviceModalCloseButton {
	position: absolute;
	top: 10px;
	right: 10px;
	cursor: pointer;
	width: 32px;
	height: 32px;
	border-radius: 50%;
	background: #eb4335;
	display: flex;
	justify-content: center;
	align-items: center;
	color: white;
	font-size: 18px;
	font-weight: bold;
}

.serviceModalBody {
	display: flex;
	flex-direction: column;
	row-gap: 15px;
	padding: 0px 60px;
}

.serviceNameModalInput {
	border: none;
	background-color: #f5f5f5;
	padding: 15px 10px;
	border-radius: 5px;
}

.serviceInputLabel {
  display: flex;
  flex-direction: column;
  row-gap: 15px;
}

.serviceModalPriceAndDurationFields {
	display: flex;
	justify-content: space-between;
}

.servicePriceAndDurationModalInputs {
  border: none;
  background-color: #f5f5f5;
  padding: 15px 10px;
  border-radius: 5px;
  width: 100%;
}

.serviceModalTextArea {
	border: none;
	background-color: #f5f5f5;
	padding: 15px 10px;
	border-radius: 5px;
	resize: none;
}

.serviceModalSaveButton {
	padding: 10px 0px;
	width: 150px;
	border: none;
	cursor: pointer;
	border-radius: 5px;
	font-size: 16px;
	background-color: #dee33e;
	transition: all 0.3s ease;
	align-self: center;
	color: #fff;
}

.serviceModalSaveButton:hover {
	background-color: #c1c638;
}
/* ... */

